--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.39",
+    "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "meteor-node-stubs": "~0.3.2",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
     "react-addons-pure-render-mixin": "^15.6.2",
+    "react-axios": "^2.0.0",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.9",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "semantic-ui-css": "^2.2.12",
